# RollbackEngine

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
setup/: bootstrap.sh  run-bootstrap.sh
toolchains/: toolchain-linux.cmake  toolchain-windows.cmake
